// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value=""
    />
    <withLocale(defaultProps(DatePicker))
      onChange={[Function]}
    />
    <textarea
      onChange={[Function]}
      placeholder="type something(optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render ExpenseForm with expense data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="test"
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value={195}
    />
    <withLocale(defaultProps(DatePicker))
      onChange={[Function]}
    />
    <textarea
      onChange={[Function]}
      placeholder="type something(optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <p>
    please provide description and amount
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="number"
      value=""
    />
    <withLocale(defaultProps(DatePicker))
      onChange={[Function]}
    />
    <textarea
      onChange={[Function]}
      placeholder="type something(optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;
